# GUI-Attention

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  train.py  train_grpo.py  train_grpo_attention.py  train_grpo_multi_round.py  train_grpo_text.py  train_lora.py  train_lora_guiaima.py  train_pointer.py  train_progressive.py
configs/: default.yaml
docs/: related_work.md
eval/: eval_baseline_on_trainset.py  eval_foveated.py  eval_grpo_attention.py  eval_screenspot.py  eval_screenspot_pro.py  eval_screenspot_pro.sh  eval_screenspot_pro_aligned.py  eval_screenspot_v2.py  eval_train_hit.py  example_inference.py  time_gui_actor.py  visualize_saccade.py
jobs/: download_gui_actor_data.sh  eval_all_screenspot.sh  eval_baselines_on_trainset.sh  eval_comparison.sh  eval_gui_actor_baseline.sh  eval_ours.sh  eval_smoke.sh  prepare_5k_subset.py  setup_and_train.sh  setup_and_train_v6.sh  sft_smoke.sh  train.sh  train_all_2gpu.sh  train_all_aligned.sh  train_grpo.sh  train_guiact.sh  train_guiact_2gpu.sh  train_guiact_aligned.sh  train_guiactor_5k.sh  train_ours_5k.sh  train_ours_5k_2gpu.sh  train_v8.sh  zero3.json
scripts/: convert_groundcua.py  convert_screenspot_to_gta.py  eval_aligned.sh  eval_all.sh  eval_standard.sh  run_eval_batch.sh  test_inference.py  train_grpo.sh  train_grpo_attention.sh  train_grpo_multi_round.sh  train_progressive.sh  train_sft.sh
src/gui_attention/: __init__.py  action_head.py  attention.py  builder.py  constants.py  crop.py  dual_head.py  foveated_inference.py  grpo.py  (+8 more)
tests/: test_gpu_integration.py  test_train_logic.py  test_utils.py
(+19 files in other folders)
